--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,27 @@
+# Dependencies
 node_modules/
 package-lock.json
+
+# Build outputs
 dist/
+youtube.user.js
+
+# IDE
+.vscode/
+.idea/
+*.sublime-*
 .DS_Store
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Environment
+.env
+.env.local
