--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
+  "printWidth": 100,
   "semi": true,
   "singleQuote": true,
   "trailingComma": "es5",
-  "printWidth": 100,
+  "arrowParens": "avoid",
   "tabWidth": 2,
   "bracketSpacing": true,
   "endOfLine": "lf"
