--- a/package.json
+++ b/package.json
@@ -20,23 +20,29 @@
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
-    "test:smoke": "node test/smoke.js"
+    "test:smoke": "node test/smoke.js",
+    "security:audit": "npm audit --audit-level=moderate",
+    "security:fix": "npm audit fix",
+    "precommit": "lint-staged",
+    "validate": "npm run typecheck && npm run lint && npm run test:unit",
+    "validate:build": "node validate-build.js",
+    "benchmark": "node benchmark.js"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.7.0",
-    "chokidar": "^3.5.3",
+  "@types/node": "^24.7.2",
+  "chokidar": "^4.0.3",
     "eslint": "^9.37.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-    "lint-staged": "^16.2.3",
+  "lint-staged": "^16.2.4",
     "prettier": "^3.0.0",
     "pretty-quick": "^4.2.2",
     "terser": "^5.44.0",
     "typescript": "^5.9.3"
-    ,"@microsoft/eslint-formatter-sarif": "^2.0.0"
-    ,"puppeteer": "^21.3.3"
+  ,"@microsoft/eslint-formatter-sarif": "^3.1.0"
+  ,"puppeteer": "^24.25.0"
   },
   "lint-staged": {
     "src/**/*.js": [
