--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtubeplus",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "Modular userscript build system for YouTube+ with automatic formatting, linting and pre-commit hooks",
   "private": true,
   "author": "diorhc",
@@ -11,9 +11,10 @@
     "build:fast": "node build.js --no-eslint",
     "build:minify": "node build.js --minify",
     "build:watch": "node build.js --watch",
-    "lint": "eslint \"src/**/*.js\" \"build.js\"",
-    "lint:fix": "eslint \"src/**/*.js\" \"build.js\" --fix",
+    "lint": "eslint --no-warn-ignored \"src/**/*.js\" \"build.js\"",
+    "lint:fix": "eslint --no-warn-ignored \"src/**/*.js\" \"build.js\" --fix",
     "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch",
     "format": "prettier --write \"src/**/*.js\" \"*.js\" \"!youtube.user.js\"",
     "format:check": "prettier --check \"src/**/*.js\" \"*.js\" \"!youtube.user.js\"",
     "test": "npm run lint && npm run format:check && npm run test:unit && npm run build",
@@ -21,36 +22,40 @@
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "test:smoke": "node test/smoke.js",
+    "test:all": "npm run typecheck && npm run test",
     "security:audit": "npm audit --audit-level=moderate",
     "security:fix": "npm audit fix",
     "precommit": "lint-staged",
     "validate": "npm run typecheck && npm run lint && npm run test:unit",
     "validate:build": "node validate-build.js",
-    "benchmark": "node benchmark.js"
+    "benchmark": "node benchmark.js",
+    "clean": "node -e \"require('fs').rmSync('coverage', {recursive: true, force: true}); require('fs').rmSync('youtube.user.js', {force: true});\" && echo Cleaned build artifacts",
+    "check:deps": "npm outdated || true",
+    "update:deps": "npm update && npm audit fix"
   },
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@types/jest": "^30.0.0",
-  "@types/node": "^24.7.2",
-  "chokidar": "^4.0.3",
+    "@types/node": "^24.7.2",
+    "chokidar": "^4.0.3",
     "eslint": "^9.37.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-  "lint-staged": "^16.2.4",
+    "lint-staged": "^16.2.4",
     "prettier": "^3.0.0",
     "pretty-quick": "^4.2.2",
+    "puppeteer": "^24.25.0",
     "terser": "^5.44.0",
     "typescript": "^5.9.3"
-  ,"@microsoft/eslint-formatter-sarif": "^3.1.0"
-  ,"puppeteer": "^24.25.0"
   },
   "lint-staged": {
     "src/**/*.js": [
-      "eslint --fix",
+      "eslint --no-warn-ignored --fix",
       "prettier --write"
     ],
     "build.js": [
-      "eslint --fix",
+      "eslint --no-warn-ignored --fix",
       "prettier --write"
     ]
   }
