--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    // Enable type checking for JavaScript files
+    // Enable JavaScript sources but keep type checking opt-in via // @ts-check when ready
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
@@ -11,19 +11,19 @@
     "target": "ES2020",
     "lib": ["ES2020", "DOM"],
 
-    // Type checking options
+    // Type checking options (gradually enable strict mode)
     "strict": false,
     "noImplicitAny": false,
     "strictNullChecks": false,
-    "strictFunctionTypes": false,
+    "strictFunctionTypes": true,
     "strictPropertyInitialization": false,
     "noImplicitThis": true,
     "alwaysStrict": true,
 
-    // Additional checks
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": false,
+    // Additional checks (enabled but not blocking)
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
 
     // Advanced options
