--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,10 @@ jobs:
       - name: Run format check
         run: npm run format:check
 
+      - name: Run security audit
+        run: npm audit --audit-level=moderate
+        continue-on-error: true
+
       - name: Run unit tests
         run: npm run test:unit
 
