--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
   "name": "youtubeplus",
-  "version": "2.3.3",
+  "version": "2.3.4",
   "description": "Professional-grade YouTube enhancement userscript with modular architecture, comprehensive error handling, performance monitoring, and automated testing",
   "private": true,
   "author": "diorhc",
@@ -39,6 +39,9 @@
     "build:analyze": "npm run build && npm run benchmark",
     "build:sourcemap": "npm run build && node generate-sourcemap.js",
     "build:production": "npm run clean && npm run build:minify && npm run validate:build",
+    "beads:install": "pwsh -ExecutionPolicy Bypass -File install-beads.ps1",
+    "beads:init": "bd init",
+    "beads:ready": "bd ready",
     "lint": "eslint --no-warn-ignored \"src/**/*.js\" \"build.js\"",
     "lint:fix": "eslint --no-warn-ignored \"src/**/*.js\" \"build.js\" --fix",
     "lint:report": "eslint --no-warn-ignored \"src/**/*.js\" \"build.js\" --output-file eslint-report.json --format json",
