--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
   "name": "youtubeplus",
-  "version": "2.4.2",
+  "version": "2.4.3",
   "description": "Professional-grade YouTube enhancement userscript with modular architecture, comprehensive error handling, performance monitoring, and automated testing",
   "private": true,
   "author": "diorhc",
@@ -91,6 +91,9 @@
     "prerelease": "npm run quality:full && npm run build:production",
     "docs:serve": "echo 'Documentation server not configured' && exit 1",
     "update:badges": "node scripts/update-greasyfork-badges.js https://greasyfork.org/ru/scripts/537017-youtube README.md"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.47.0"
   },
   "devDependencies": {
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
